# recutil-tools

./: CHANGELOG.md  Cargo.toml  README.md
.claude/skills/recsql/: SKILL.md
k-rec/: README.md  rec.k
rec2parquet/: Cargo.toml  README.md
recsql/: Cargo.toml  README.md
recsql/src/: format.rs  lib.rs  main.rs  pushdown.rs  repl.rs  sink.rs
recutils-rs/: Cargo.toml  README.md  build.rs
recutils-rs/examples/: write_rec.rs
recutils-rs/src/: arrow.rs  bindings.docsrs.rs  db.rs  lib.rs  rset.rs
