[workspace]
resolver = "2"
members = [
    "recutils-rs",
    "rec2parquet",
    "recsql",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Nimalan <nimalan.m@protonmail.com>"]
repository = "https://github.com/Mark1626/recutil-tools"
homepage = "https://github.com/Mark1626/recutil-tools"
