[package]
name = "rec2parquet"
description = "CLI to convert GNU recutils .rec files to Apache Parquet"
keywords = ["recutils", "parquet", "arrow", "cli", "convert"]
categories = ["command-line-utilities", "database", "encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "rec2parquet"
path = "src/main.rs"

[dependencies]
recutils-rs = { path = "../recutils-rs", version = "0.1", features = ["arrow"] }
arrow = "58"
parquet = "58"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
