[package]
name = "recsql"
description = "Query GNU recutils .rec files with SQL via Apache DataFusion"
keywords = ["recutils", "sql", "datafusion", "cli", "query"]
categories = ["command-line-utilities", "database"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
name = "recsql"
path = "src/lib.rs"

[[bin]]
name = "recsql"
path = "src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
recutils-rs = { path = "../recutils-rs", version = "0.1", features = ["arrow"] }
arrow = "58"
datafusion = "53"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
