[package]
name = "recutils-rs"
description = "Rust FFI bindings to GNU recutils (librec) with an optional Arrow conversion layer"
keywords = ["recutils", "ffi", "bindings", "arrow", "database"]
categories = ["api-bindings", "external-ffi-bindings", "database"]
links = "rec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[features]
default = []
# Enables the `recutils_rs::arrow` module — rec → Apache Arrow conversion.
arrow = ["dep:arrow", "dep:log"]

[dependencies]
arrow = { version = "58", optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
bindgen = "0.71"

[lib]
name = "recutils_rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
features = ["arrow"]
rustdoc-args = ["--cfg", "docsrs"]
